# pico-microtvm-standalone

./: .gitignore  CMakeLists.txt  README.md  add.onnx  build_module.py  copy-tvm-crt.sh  diff.patch  requirements.txt
src/: bundle_static.c  main.c
src/tvm/: crt_deploy.c
src/tvm/crt_config/: crt_config.h
src/tvm/standalone_crt/include/tvm/runtime/crt/: graph_executor.h
src/tvm/standalone_crt/src/runtime/crt/common/: crt_backend_api.c
src/tvm/standalone_crt/src/runtime/crt/graph_executor/: graph_executor.c
